# rust_microbitv2_template

./: Cargo.toml  README-template.md  README.md  cargo-generate.toml
src/: main.rs
