[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.microbit-v2]
version = "0.12.0"
optional = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }

[features]
v2 = ["microbit-v2"]